--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="C:\Users\Jakri\git_practice\excursion\resources\css\style.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" ้ href="resources/css/style.css">
     <title>A Mobile App</title>
   </head>
 
   <body>
-    <div id="all">
+  <div id="all">
     <h1>Discover hidden places in the world around you</h1>
-    <a class="comingsoon">Download Excursion (Coming Soon!)</a><br  />
+    <p><a class="comingsoon">Download Excursion (Coming Soon!)</a></p>
 
     <video src="C:\Users\Jakri\git_practice\excursion\resources\video\excursion.mp4" autoplay loop="">Video not supported</video>
 
     <h2 class="h2">Your personal travel guide</h2>
     <p class="explaination">Excursion remembers places you like, and recommends new points of interest around you</p>
-
     <img src="C:\Users\Jakri\git_practice\excursion\resources\images\camp.jpg" alt="camp" /><br  />
+
     <img id="phone" src="C:\Users\Jakri\git_practice\excursion\resources\images\phone.png" alt="phone" />
 
     <h2 class="h2">Coming Soon for iPhone and Android</h2>
-    <a class="comingsoon">Download Excursion (Coming soon!)</a>
+    <p><a class="comingsoon">Download Excursion (Coming soon!)</a></p>
+
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
 
   </div>
   </body>
