--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Discover hidden places in the world around you</h1>
     <p><a class="comingsoon">Download Excursion (Coming Soon!)</a></p>
 
-    <video src="C:\Users\Jakri\git_practice\excursion\resources\video\excursion.mp4" autoplay loop="">Video not supported</video>
+    <video autoplay muted loop><source src="resources\video\excursion.mp4" type="video/mp4"></video>
 
     <h2 class="h2">Your personal travel guide</h2>
     <p class="explaination">Excursion remembers places you like, and recommends new points of interest around you</p>
-    <img src="C:\Users\Jakri\git_practice\excursion\resources\images\camp.jpg" alt="camp" /><br  />
+    <p><img src="resources\images\camp.jpg" alt="camp" /></p>
 
-    <img id="phone" src="C:\Users\Jakri\git_practice\excursion\resources\images\phone.png" alt="phone" />
+    <p><img id="phone" src="resources\images\phone.png" alt="phone" /></p>
 
     <h2 class="h2">Coming Soon for iPhone and Android</h2>
     <p><a class="comingsoon">Download Excursion (Coming soon!)</a></p>
